# MultiplayerLOA

./: .gitignore  .gitmodules  CMakeLists.txt
client/: CMakeLists.txt
client/include/app/: app.h  playingwindow.h  waitforconnectionwindow.h  window.h  windowarea.h
client/include/networking/: windowstcpclient.h
client/src/: main.cpp
client/src/app/: app.cpp  playingwindow.cpp  waitforconnectionwindow.cpp  window.cpp  windowarea.cpp
client/src/networking/: windowstcpclient.cpp
common/: CMakeLists.txt
common/include/common/game/: board.h  color.h  game.h  move.h  player.h  point.h
common/include/common/networking/: client.h  message.h  tcpclient.h
common/include/common/utils/: bytebuffer.h  ip.h  timer.h
common/src/game/: game.cpp  move.cpp  player.cpp  point.cpp
common/src/networking/: message.cpp  tcpclient.cpp
common/src/utils/: bytebuffer.cpp  ip.cpp  timer.cpp
scripts/: build.bash
server/: CMakeLists.txt
server/include/game/: game.h  serverboard.h
server/include/networking/: linuxtcpclient.h  server.h  serverclient.h  serverplayer.h
server/src/: main.cpp
server/src/game/: game.cpp  serverboard.cpp  serverplayer.cpp
server/src/networking/: linuxtcpclient.cpp  server.cpp  serverclient.cpp
